--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage" : "https://saxenaPalak1234.github.io/Weather-App",
   "name": "weather_app",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +16,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "deploy" : "gh-pages -d build",
+    "predeploy" : "npm  run build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
